Adding parallax for two screens

--- a/src/components/big/options-screen/style.sass
+++ b/src/components/big/options-screen/style.sass
@@ -1,2 +1,13 @@
+@import '../../../styles/colour'
+
 .option-screen
-    background: linear-gradient( 90deg, #EBB27D 100%, #E99857 0%)
+    background: $color2-background
+    display: flex
+    justify-content: center
+
+    .option-card
+        border-radius: 0.7rem
+        width: 100%
+        height: 30rem
+        background: $color3-tile
+        align-items: center
