--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,4 +1,4 @@
-@import './background.sass'
+@import './colour.sass'
 @import './position.sass'
 @import './screen.sass'
 @import './typography.sass'
