--- a/src/components/big/start-screen/style.sass
+++ b/src/components/big/start-screen/style.sass
@@ -1,5 +1,7 @@
+@import '../../../styles/colour'
+
 .start-screen
-    background: linear-gradient( 90deg, rgba(136, 158, 175, 1) 100%, rgba(80, 109, 132, 1) 0%)
+    background: $color1-background
     display: flex
     align-items: center
     justify-content: center
